# k8s-investigate

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  helm-release.yml
charts/k8s-investigate/: Chart.yaml  values.yaml
charts/k8s-investigate/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
charts/k8s-purify/: Chart.yaml  values.yaml
charts/k8s-purify/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  rbac.yaml  (+1 more)
k8s_investigate/: __init__.py  __main__.py  cli.py  config.py  delete.py  exporter.py  formatters.py  k8s_client.py  scanner.py
k8s_investigate/scanners/: __init__.py  clusterrolebindings.py  clusterroles.py  configmaps.py  daemonsets.py  deployments.py  hpas.py  ingresses.py  jobs.py  networkpolicies.py  pdbs.py  pods.py  priorityclasses.py  pvcs.py  pvs.py  replicasets.py  rolebindings.py  roles.py  secrets.py  serviceaccounts.py  services.py  statefulsets.py  storageclasses.py
k8s_purify/: __init__.py  __main__.py  cli.py  config.py  delete.py  exporter.py  formatters.py  k8s_client.py  scanner.py
k8s_purify/scanners/: __init__.py  clusterrolebindings.py  clusterroles.py  configmaps.py  daemonsets.py  deployments.py  hpas.py  ingresses.py  jobs.py  networkpolicies.py  pdbs.py  pods.py  priorityclasses.py  pvcs.py  pvs.py  replicasets.py  rolebindings.py  roles.py  secrets.py  serviceaccounts.py  services.py  statefulsets.py  storageclasses.py
tests/: test_config.py  test_formatters.py  test_scanner.py
