[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-investigate"
version = "0.6.0"
authors = [
  { name="Viet Hoang", email="viethoangwork1211@gmail.com" },
]
description = "Kubernetes orphaned resources finder and cleaner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["kubernetes", "k8s", "orphaned", "unused", "resources", "cleanup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kubernetes>=28.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.scripts]
k8s-investigate = "k8s_investigate.cli:main"

[tool.setuptools.packages.find]
include = ["k8s_investigate*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::SyntaxWarning",
]
